@@ -181,3 +181,4 @@
  23-Oct-2019  V0.86 Add nesting property to objects with unit cardinality,
                     don't propagate exact-match/suggest search contexts to full-text
  25-Oct-2019  V0.87 Address a couple of anomalous sequence accession code issues and sync up mock repos
+ 26-Oct-2019  V0.88 Address anomalous non-polymer reference sequence records.
